# scram

./: Cargo.toml
crates/scram/: Cargo.toml
crates/scram/src/: half_block.rs  main.rs  visualizer.rs
crates/scram_capture/: Cargo.toml
crates/scram_capture/src/: lib.rs
crates/scram_process/: Cargo.toml
crates/scram_process/src/: background.rs  band_smoothing.rs  bands.rs  config.rs  lib.rs  preprocess.rs  rfft.rs  scaling.rs
crates/scram_visualize/: Cargo.toml
crates/scram_visualize/src/: lib.rs  math.rs  surface.rs  visualizers.rs
crates/scram_visualize/src/visualizers/: radial_bloom.rs  scrolling_spectro.rs  spec_circular.rs  spec_ribbon.rs  spec_slice.rs  stack_channels.rs  stacked_freqs.rs  stacked_outline.rs
src/: capture.rs  lib.rs  math.rs  process.rs  synth.rs  visualizer.rs
src/process/: band_smoothing.rs  bands.rs  buffer.rs  config.rs  magnitudes.rs  peak_smoothing.rs  preprocess.rs  rfft.rs  scaling.rs
src/visualizer/: half_block.rs  visualizers.rs
