[workspace]
members = [
    "crates/scram",
    "crates/scram_capture",
    "crates/scram_process",
    "crates/scram_visualize"
]
resolver = "3"
package.version = "0.1.0"
package.edition = "2024"
package.rust-version = "1.86.0"

default-members = [ "crates/scram" ]

[workspace.dependencies]
scram_capture = { path = "crates/scram_capture" }
scram_process = { path = "crates/scram_process" }
scram_visualize = { path = "crates/scram_visualize" }


anyhow = "1.0.98"
parking_lot = "0.12.3"
profiling = "1.0.16"
flume = { version = "0.11.1", default-features = false }
